--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+albucore==0.0.24
+albumentations==2.0.8
 altair==5.5.0
 annotated-types==0.7.0
 attrs==25.3.0
@@ -6,16 +8,26 @@ cachetools==6.2.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
+filelock==3.19.1
+fsspec==2025.9.0
 gitdb==4.0.12
 GitPython==3.1.45
+hf-xet==1.1.10
+huggingface-hub==0.35.0
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
+joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+lightgbm==4.6.0
 MarkupSafe==3.0.2
+mpmath==1.3.0
 narwhals==2.5.0
-numpy==2.3.3
+networkx==3.5
+numpy==2.2.6
+opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
@@ -30,16 +42,33 @@ pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.2
+pyzbar==0.1.9
 referencing==0.36.2
+regex==2025.9.1
 requests==2.32.5
 rpds-py==0.27.1
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.0
+setuptools==80.9.0
+simsimd==6.5.3
 six==1.17.0
 smmap==5.0.2
 streamlit==1.49.1
+stringzilla==4.0.11
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.0
 toml==0.10.2
+torch==2.8.0
 tornado==6.5.2
+tqdm==4.67.1
+transformers==4.56.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+xgboost==3.0.5
