--- a/requirements.txt
+++ b/requirements.txt
@@ -72,3 +72,10 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 xgboost==3.0.5
+
+# Additional dependencies for enhanced scanner
+ultralytics>=8.0.0
+faiss-cpu>=1.7.0
+selenium>=4.15.0
+beautifulsoup4>=4.12.0
+cloudscraper>=1.2.0
